--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -19,6 +19,6 @@
     <script src="{{ site.url }}/assets/js/vendor/popper.min.js"></script>
     <script src="{{ site.url }}/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="{{ site.ure }}/assets/js/vendor/holder.min.js"></script>
+    <script src="{{ site.url }}/assets/js/vendor/holder.min.js"></script>
   </body>
 </html>
