--- a/_includes/index.html
+++ b/_includes/index.html
@@ -9,73 +9,108 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1>Example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+            <img class="first-slide" src="{{ site.url }}/assets/images/Accessibility-Testing.png" alt="ADA Testing">
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                <!--<h1 class="text-body">Is your website Accessible?</h1>
+                <p class="text-dark">Get an Accessibility Audit @ $165.</br>
+                  Recive a Free 30 min consultation on how to resolve issues.</p> -->
+                <p><a class="btn btn-lg btn-success" href="#" role="button">Free Accessibility Report</a></p>
               </div>
             </div>
           </div>
+          <!-- <div class="carousel-item">
+            <img class="second-slide" src="{{ site.url }}/assets/images/atlanticbt_508-compliance-1240x460.jpg" alt="VPAT">
+            <div class="container">
+              <div class="carousel-caption text-left">
+                <h1 class="text-body">What is a VPAT Document?</h1>
+                <p class="text-dark">Voluntary Product Accessibility Template (VPAT). </br>
+                Evaluates how accessible a product is for Section 508, WCAG & EU. </p>
+                <p><a class="btn btn-lg btn-success" href="#" role="button">Free Accessibility Report</a></p>
+              </div>
+            </div>
+          </div> -->
+          <!--<div class="carousel-item">
+            <img class="third-slide" src="{{ site.url }}/assets/images/blog-accessibility-717x359.png" alt="Web Acessibility">
+            <div class="container">
+              <div class="carousel-caption text-left">
+                <h1 class="text-body">What is Web Accessibility?</h1>
+                <p class="text-dark">The act of developing electronic content that is accessibile for everyone.</p>
+                <p><a class="btn btn-lg btn-success" href="#" role="button">Free Accessibility Report</a></p>
+              </div>
+            </div>
+          </div> -->
         </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <!-- <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
-        </a>
+        </a> -->
       </div>
-
+<hr />
 
       <!-- Marketing messaging and featurettes
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
+      <div class="row mb-3">
+        <div class="col-md-8 offset-md-2">
+          <p class="lead">Don't get caught off guard know the rules. To many companines are dealing with meitgations do to lack of compliance.</p>
+          <p class="lead">We help business become ADA compliant and offer VPAT Certification and full site audits to make sure you're not nex inline.</p>
+        </div>
+      </div>
+
 
       <div class="container marketing">
 
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">ADA Audit w/VPAT: $1495</h5>
+                <ul>
+                  <li class="text-left">Web Accessibility Review</li>
+                  <li class="text-left">How-to-fix issues</li>
+                  <li class="text-left">VPAT Certification</li>
+                </ul>
+                <a href="#" class="btn btn-info">Buy Now!</a>
+              </div>
+            </div>          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">VPAT Document: $495</h5>
+                <ul>
+                  <li class="text-left">Been told you need a VPAT?</li>
+                  <li class="text-left">Is your website accessible?</li>
+                  <li class="text-left">We will do your VPAT for you</li>
+                </ul>
+                <a href="#" class="btn btn-info">Buy Now!</a>
+              </div>
+            </div>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">ADA Audit: $165</h5>
+                <ul>
+                  <li class="text-left">Know where you stand</li>
+                  <li class="text-left">Get an evaluation of you site</li>
+                  <li class="text-left">Report of issuse & resolution</li>
+                </ul>
+                <a href="#" class="btn btn-info">Buy Now!</a>
+              </div>
+            </div>
+           </div><!-- /.col-lg-4 -->
+
+           <p>There are four (4) types of VPAT Documents Certifications. </p>
+           <p>Pricing is based on a simple VPAT one type of certification. If you need a full VPAT covering all certification just let us know.</p>
         </div><!-- /.row -->
 
 
@@ -85,8 +120,29 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">VPAT Certification <span class="text-muted">We do them for you.</span></h2>
+
+            <p class="lead">Do you need a VPAT Document for your website or application?</p>
+            <p class="lead">We fill out for you and Certify compliance with the required standards.</p>
+            <p class="lead">There are four (4) types VPAT Certifications based requirments:</p>
+
+            <div class="row">
+              <div class="col-md-4">
+                <ul>
+                  <li>VPAT 508</li>
+                  <li>VPAT EU</li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <li>VPAT WVAG</li>
+                <li>Full VPAT</li>
+              </ul>
+            </div>
+          </div>
+
+            <p class="lead">Each is desiged to meet a spacifice requirement. Let us know what you need the VPAT for and we will pick
+            the Certification that fits your needs.</p>
+
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -97,8 +153,16 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Accessibility Monitoring <span class="text-muted">Be Alerted of issues</span></h2>
+
+            <p class="lead">Are you looking to get you website or application ADA Certified?</p>
+            <p class="lead">We will run an Accessibility Evauation on your product and send you a report of issues that need to
+            be resolved one resolved we issue a VPAT Certification based on your level of comliance.</p>
+
+            <p class="lead">We know that websites grown and code is ever changing therfore we strongly adviesed you
+            sign up for monthly monitoring to keep you alerted of any issues that may arise as you fix bgs and grow your
+            site.</p>
+
           </div>
           <div class="col-md-5 order-md-1">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -109,8 +173,18 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">What are the Benefits? <span class="text-muted">See for yourself.</span></h2>
+            <p class="lead">I you are ever looking for a cheap and easy way to help your marketing time or improve you SEO Web Accessibility
+            is a great place to start.</p>
+
+            <ul>
+              <li>Better responsive design and UX/UI Experiance</li>
+              <li>Make it easy for Search Engine index your more affectively</li>
+              <li>Drive traffic & even lower your bounce rate</li>
+            </ul>
+
+            <p class="lead">Bottom line is if you are doing Web Accessible for markeing or for Section 508 requirements you
+            need to stay on top of it. We help do that with VPAT Certifications and Accessibility Monitoring.</p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -127,6 +201,6 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017-2018 {{ site.company }} &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
     </main>
