--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -12,13 +12,9 @@
 
     {{ content }}
 
-    {% include footer.html %}
-
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="{{ site.url }}/assets/js/vendor/popper.min.js"></script>
-    <script src="{{ site.url }}/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="{{ site.url }}/assets/js/vendor/holder.min.js"></script>
+    <script src="{{ site.url }}/assets/js/bootstrap.min.js"></script>
   </body>
 </html>
