--- a/_includes/index.html
+++ b/_includes/index.html
@@ -15,7 +15,7 @@
                 <!--<h1 class="text-body">Is your website Accessible?</h1>
                 <p class="text-dark">Get an Accessibility Audit @ $165.</br>
                   Recive a Free 30 min consultation on how to resolve issues.</p> -->
-                <p><a class="btn btn-lg btn-success" href="#" role="button">Free Accessibility Report</a></p>
+                <p><a class="btn btn-lg btn-info" href="#" role="button">Free Accessibility Report</a></p>
               </div>
             </div>
           </div>
@@ -50,8 +50,8 @@
           <span class="sr-only">Next</span>
         </a> -->
       </div>
-<hr />
 
+      <hr class="featurette-divider">
       <!-- Marketing messaging and featurettes
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -79,10 +79,11 @@
                 </ul>
                 <a href="#" class="btn btn-info">Buy Now!</a>
               </div>
-            </div>          </div><!-- /.col-lg-4 -->
+            </div>
+         </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+              <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">VPAT Document: $495</h5>
                 <ul>
@@ -96,7 +97,7 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+              <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">ADA Audit: $165</h5>
                 <ul>
@@ -145,7 +146,7 @@
 
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/VPATSummary.jpg" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -164,8 +165,8 @@
             site.</p>
 
           </div>
-          <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <div class="col-md-5 order-md-1 mt-5 pt-5">
+            <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/AccessibilityMonitoring.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -174,20 +175,24 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">What are the Benefits? <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">I you are ever looking for a cheap and easy way to help your marketing time or improve you SEO Web Accessibility
-            is a great place to start.</p>
 
+            <p class="lead">Web Accessibility is a great place to start to improve your marketing and SEO strategies.
+            Globally people with disabilities have a $9 Billion dollar disposable income. Why would you not take part in this?</p>
+
+            <p class="lead">With accessibility design, you will build a site that is responsive by nature and has a substantial user interface.</p>
             <ul>
-              <li>Better responsive design and UX/UI Experiance</li>
-              <li>Make it easy for Search Engine index your more affectively</li>
-              <li>Drive traffic & even lower your bounce rate</li>
+              <li>Increase traffic to your site</li>
+              <li>Have a site that is user friendly</li>
+              <li>Make it easy for Search Engine index your site</li>
+              <li>Keep visitors on your site longer & lower your bounce rate</li>
+              <li>Stand out from your compitition</li>
             </ul>
 
-            <p class="lead">Bottom line is if you are doing Web Accessible for markeing or for Section 508 requirements you
-            need to stay on top of it. We help do that with VPAT Certifications and Accessibility Monitoring.</p>
+            <p class="lead">Bottom line is if you are doing Web Accessible for marketing or for Section 508 requirements you need to stay on top of it.
+            We help do that with VPAT Certifications and Accessibility Monitoring.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/AccessibilityBenefits.jpeg" alt="Generic placeholder image">
           </div>
         </div>
 
