--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{{ site.url }}/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{{ site.url }}/VPAT">VPAT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ site.url }}/508">508</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ site.url }}/Monitoring">Monitoring</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
