--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="{{ site.url }}/VPAT">VPAT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}/508">508</a>
+          <a class="nav-link" href="{{ site.url }}/508">Section 508</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ site.url }}/Monitoring">Monitoring</a>
