--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,6 +4,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
     {% include head.html %}
     {% include header.html %}
