--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -12,10 +12,10 @@
 
     <main role="main">
       <div class="row">
-        <div class="col-4 offset-md-2">
+        <div class="col-10 offset-md-2">
           <h2 class="sr-only">VPAT Documnets - Get a Free Consultation Today<h2>
           <figure class="nidden-xs hidden-sm">
-            <img class="first-slide" src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title }} banner image">
+            <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title }} banner image">
           </figure>
         </div>
       </div>
