--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,57 +1,21 @@
 
     <main role="main">
-
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="first-slide" src="{{ site.url }}/assets/images/Accessibility-Testing.png" alt="ADA Testing">
-            <div class="container">
-              <div class="carousel-caption text-right">
-                <!--<h1 class="text-body">Is your website Accessible?</h1>
-                <p class="text-dark">Get an Accessibility Audit @ $165.</br>
-                  Recive a Free 30 min consultation on how to resolve issues.</p> -->
-                <p><a class="btn btn-lg btn-info" href="#" role="button">Free Accessibility Report</a></p>
-              </div>
-            </div>
-          </div>
-          <!-- <div class="carousel-item">
-            <img class="second-slide" src="{{ site.url }}/assets/images/atlanticbt_508-compliance-1240x460.jpg" alt="VPAT">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1 class="text-body">What is a VPAT Document?</h1>
-                <p class="text-dark">Voluntary Product Accessibility Template (VPAT). </br>
-                Evaluates how accessible a product is for Section 508, WCAG & EU. </p>
-                <p><a class="btn btn-lg btn-success" href="#" role="button">Free Accessibility Report</a></p>
-              </div>
-            </div>
-          </div> -->
-          <!--<div class="carousel-item">
-            <img class="third-slide" src="{{ site.url }}/assets/images/blog-accessibility-717x359.png" alt="Web Acessibility">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1 class="text-body">What is Web Accessibility?</h1>
-                <p class="text-dark">The act of developing electronic content that is accessibile for everyone.</p>
-                <p><a class="btn btn-lg btn-success" href="#" role="button">Free Accessibility Report</a></p>
-              </div>
-            </div>
-          </div> -->
+      <div class="row mt-5">
+        <div class="col-10 offset-md-1">
+          <h2 class="sr-only">VPAT Documnets - Get a Free Consultation Today<h2>
+          <figure class="hidden-xs hidden-sm">
+            <img class="img-fluid" src="{{ site.url }}/assets/images/Accessibility-Testing.png" alt="ADA Testing">
+          </figure>
         </div>
-        <!-- <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a> -->
+      </div>
+      <div class="row pr-5 mr-5">
+        <div class="col-8 offset-md-2 text-right">
+          <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultations</a></p>
+        </div>
       </div>
 
       <hr class="featurette-divider">
+
       <!-- Marketing messaging and featurettes
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
