--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -19,7 +19,7 @@
           </figure>
         </div>
       </div>
-      <div class="row pr-4">
+      <div class="row">
         <div class="col-7 offset-md-2 text-right">
           <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultations</a></p>
         </div>
