--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -13,14 +13,14 @@
     <main role="main">
       <div class="row">
         <div class="col-10 offset-md-2">
-          <h2 class="sr-only">VPAT Documnets - Get a Free Consultation Today<h2>
-          <figure class="nidden-xs hidden-sm">
-            <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title }} banner image">
+          <h2 class="sr-only">{{ page.caption }}<h2>
+          <figure class="d-xs-none d-sm-none d-md-block d-lg-block">
+            <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width:90%;" alt="{{ page.title }} banner image">
           </figure>
         </div>
       </div>
       <div class="row">
-        <div class="col-7 offset-md-2 text-right">
+        <div class="col-8 offset-md-2 text-right">
           <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultations</a></p>
         </div>
       </div>
