--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,10 +1,10 @@
 
     <main role="main">
-      <div class="row mt-5">
-        <div class="col-10 offset-md-1">
+      <div class="row">
+        <div class="col-10 offset-md-2">
           <h2 class="sr-only">VPAT Documnets - Get a Free Consultation Today<h2>
           <figure class="hidden-xs hidden-sm">
-            <img class="img-fluid" src="{{ site.url }}/assets/images/Accessibility-Testing.png" alt="ADA Testing">
+            <img class="img-fluid" src="{{ site.url }}/assets/images/Accessibility-Testing.png" style="width: 80%;" alt="ADA Testing">
           </figure>
         </div>
       </div>
@@ -21,8 +21,10 @@
       <!-- Wrap the rest of the page in another container to center all the content. -->
       <div class="row mb-3">
         <div class="col-md-8 offset-md-2">
+          <h2>VPAT Compliant</h2>
+
           <p class="lead">Don't get caught off guard know the rules. To many companines are dealing with meitgations do to lack of compliance.</p>
-          <p class="lead">We help business become ADA compliant and offer VPAT Certification and full site audits to make sure you're not nex inline.</p>
+          <p class="lead">Become VPAT Compliant with one (1) of our Certifications. Get a full website accessibilty evaluation audit so you're not nex inline.</p>
         </div>
       </div>
 
@@ -35,10 +37,10 @@
             <div class="card" style="width: 18rem;">
               <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">ADA Audit w/VPAT: $1495</h5>
+                <h5 class="card-title">Evaluation w/VPAT: $1495</h5>
                 <ul>
                   <li class="text-left">Web Accessibility Review</li>
-                  <li class="text-left">How-to-fix issues</li>
+                  <li class="text-left">How resolve issues</li>
                   <li class="text-left">VPAT Certification</li>
                 </ul>
                 <a href="#" class="btn btn-info">Buy Now!</a>
@@ -51,9 +53,9 @@
               <div class="card-body">
                 <h5 class="card-title">VPAT Document: $495</h5>
                 <ul>
-                  <li class="text-left">Been told you need a VPAT?</li>
-                  <li class="text-left">Is your website accessible?</li>
-                  <li class="text-left">We will do your VPAT for you</li>
+                  <li class="text-left">Is your site ADA Compliant</li>
+                  <li class="text-left">Need the VPAT Filled out</li>
+                  <li class="text-left">We can do that for you</li>
                 </ul>
                 <a href="#" class="btn btn-info">Buy Now!</a>
               </div>
@@ -63,19 +65,18 @@
             <div class="card" style="width: 18rem;">
               <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">ADA Audit: $165</h5>
+                <h5 class="card-title">ADA Audit Report: $165</h5>
                 <ul>
-                  <li class="text-left">Know where you stand</li>
-                  <li class="text-left">Get an evaluation of you site</li>
-                  <li class="text-left">Report of issuse & resolution</li>
+                  <li class="text-left">Scan your site for errors</li>
+                  <li class="text-left">Audit Report of issues</li>
+                  <li class="text-left">This does not include VPAT</li>
                 </ul>
                 <a href="#" class="btn btn-info">Buy Now!</a>
               </div>
             </div>
            </div><!-- /.col-lg-4 -->
 
-           <p>There are four (4) types of VPAT Documents Certifications. </p>
-           <p>Pricing is based on a simple VPAT one type of certification. If you need a full VPAT covering all certification just let us know.</p>
+           <small>*Pricing based on one VPAT Verification and may very based on size of site..</small>
         </div><!-- /.row -->
 
 
@@ -85,11 +86,12 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">VPAT Certification <span class="text-muted">We do them for you.</span></h2>
+            <h2 class="featurette-heading">Certification <span class="text-muted">Done right.</span></h2>
 
-            <p class="lead">Do you need a VPAT Document for your website or application?</p>
-            <p class="lead">We fill out for you and Certify compliance with the required standards.</p>
-            <p class="lead">There are four (4) types VPAT Certifications based requirments:</p>
+            <p class="lead">Don't waist your time trying to understand how fill out a VPAT document. We have web accessibility experts that can do this for you.</p>
+
+            <p class="lead">Our experts have been filling out VPAT's for all industries know the differance between each type. There are four (4) types VPAT
+            Certifications based requirments:</p>
 
             <div class="row">
               <div class="col-md-4">
@@ -105,8 +107,8 @@
             </div>
           </div>
 
-            <p class="lead">Each is desiged to meet a spacifice requirement. Let us know what you need the VPAT for and we will pick
-            the Certification that fits your needs.</p>
+            <p class="lead">Each is desiged to meet a spacifice requirement. Unless you have a pre-requested VPAT, our experts will discuss your needs and help
+          determin the correct VPAT to use.</p>
 
           </div>
           <div class="col-md-5">
