--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-10 offset-md-2">
           <h2 class="sr-only">{{ page.caption }}<h2>
-          <figure class="d-xs-none d-sm-none d-md-block d-lg-block">
+          <figure>
             <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width:80%;" alt="{{ page.title }} banner image">
           </figure>
         </div>
