--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -27,7 +27,7 @@
 
       <hr class="featurette-divider">
 
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col">
               {{ content }}
