--- a/_includes/index.html
+++ b/_includes/index.html
@@ -2,7 +2,7 @@
     <main role="main">
       <div class="row">
         <div class="col-10 offset-md-2">
-          <h2 class="sr-only">VPAT Documnets - Get a Free Consultation Today<h2>
+          <h2 class="sr-only">Accessibility Testing - Get your site tested Today<h2>
           <figure class="hidden-xs hidden-sm">
             <img class="img-fluid" src="{{ site.url }}/assets/images/Accessibility-Testing.png" style="width: 80%;" alt="ADA Testing">
           </figure>
@@ -19,12 +19,14 @@
       <!-- Marketing messaging and featurettes
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
-      <div class="row mb-3">
+      <div class="row mb-3 ml-2">
         <div class="col-md-8 offset-md-2">
-          <h2>VPAT Compliant</h2>
+          <h2>Evaluation and Compliance</h2>
 
-          <p class="lead">Don't get caught off guard know the rules. To many companines are dealing with meitgations do to lack of compliance.</p>
-          <p class="lead">Become VPAT Compliant with one (1) of our Certifications. Get a full website accessibilty evaluation audit so you're not nex inline.</p>
+          <p class="lead">We offer Web Accessibilty evaluation audits with <strong>VPAT Certifications</strong> and <strong>Accessibilty Monitoring</strong>.</p>
+          <p class="lead">Our Web Accessibiltiy expert has been through the <a href="https://webaim.org/services/training/" target="_blank">WebAIM</a> course
+          and understands <a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">VPAT</a> documentation.</p>
+          <p class="lead">Get your Evaluation & <a href="{{ site.url }}/VPAT">VPAT Certification</a> today and start <a href="{{ site.url }}/Monitoring">monitoring your accessibility</a>.</p>
         </div>
       </div>
 
@@ -37,27 +39,31 @@
             <div class="card" style="width: 18rem;">
               <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Evaluation w/VPAT: $1495</h5>
+                <h5 class="card-title">Evaluation & <em>E</em>-Monitoring</h5>
+                <h6 class="card-title">$1495/$995 mo</h6>
                 <ul>
-                  <li class="text-left">Web Accessibility Review</li>
-                  <li class="text-left">How resolve issues</li>
+                  <li class="text-left">Evaluation Audit</li>
+                  <li class="text-left">Enterprise Dashboard</li>
+                  <li class="text-left">Monitoring & Reporting</li>
                   <li class="text-left">VPAT Certification</li>
                 </ul>
-                <a href="#" class="btn btn-info">Buy Now!</a>
+                <a href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" data-ycbm-modal="true" class="btn btn-info">Let's Talk</a>
               </div>
             </div>
-         </div><!-- /.col-lg-4 -->
+          </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card shadow-lg p-3 mb-5 bg-light rounded" style="width: 18rem;">
               <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">VPAT Document: $495</h5>
+                <h5 class="card-title">Evaluation & VPAT Only</h5>
+                <h6 class="card-title">$495</h6>
                 <ul>
-                  <li class="text-left">Is your site ADA Compliant</li>
-                  <li class="text-left">Need the VPAT Filled out</li>
-                  <li class="text-left">We can do that for you</li>
+                  <li class="text-left">Evaluation Audit</li>
+                  <li class="text-left">How-to resolve issues</li>
+                  <li class="text-left">VPAT Certification</li>
+                  <p>&nbsp;</p>
                 </ul>
-                <a href="#" class="btn btn-info">Buy Now!</a>
+                <a href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" data-ycbm-modal="true" class="btn btn-lg btn-info">Let's Talk</a>
               </div>
             </div>
           </div><!-- /.col-lg-4 -->
@@ -65,18 +71,21 @@
             <div class="card" style="width: 18rem;">
               <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">ADA Audit Report: $165</h5>
+                <h5 class="card-title">Evaluation Basic Monitoring</h5>
+                <h6 class="card-title">$495/$165 mo</h6>
                 <ul>
-                  <li class="text-left">Scan your site for errors</li>
-                  <li class="text-left">Audit Report of issues</li>
-                  <li class="text-left">This does not include VPAT</li>
+                  <li class="text-left">Evaluation Audit</li>
+                  <li class="text-left">How-to resolve issues</li>
+                  <li class="text-left">Monitoring & Reporting</li>
+                  <li class="text-left">VPAT Certification</li>
                 </ul>
-                <a href="#" class="btn btn-info">Buy Now!</a>
+                <a href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" data-ycbm-modal="true" class="btn btn-info">Let's Talk</a>
               </div>
             </div>
            </div><!-- /.col-lg-4 -->
 
-           <small>*Pricing based on one VPAT Verification and may very based on size of site..</small>
+
+           <small>*Pricing may very based on size of site</small>
         </div><!-- /.row -->
 
 
