--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -15,7 +15,7 @@
         <div class="col-10 offset-md-2">
           <h2 class="sr-only">{{ page.caption }}<h2>
           <figure>
-            <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width:80%;" alt="{{ page.title }} banner image">
+            <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width: 80%;" alt="{{ page.title }} banner image">
           </figure>
         </div>
       </div>
@@ -29,9 +29,72 @@
 
       <div class="container-fluid">
         <div class="row">
-          <div class="col">
+          <div class="col-6 offset-2">
               {{ content }}
           </div>
+          <div class="col-3">
+            <p><img src="{{ site.url }}/assets/images/Accessibilty-Audit-Hero-Image.jpg" style="width:85%;" class="ml-3 img-thumbnail img-fluid" alt="Web Accessibilty Brochure"></p>
+
+            <!-- Begin MailChimp Signup Form -->
+            <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
+            <style type="text/css">
+              #mc_embed_signup{background:#fff; clear:left; padding: 20px; font:14px Helvetica,Arial,sans-serif; }
+              /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+
+            <div id="mc_embed_signup">
+              <form action="https://kaffeinatedkodemonkey.us11.list-manage.com/subscribe/post?u=25ed2db8c5f44be422ac9503a&amp;id=4bd59d6de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                  <h5><strong>Free Web Accessibility Report</strong></h5>
+
+                   <div class="indicates-required"><span class="text-danger">*</span> indicates required</div>
+                   <p>&nbsp;</p>
+
+                  <div class="form-group row">
+                    <label for="fname" class="col-sm-4 col-form-label"><span class="text-danger">*</span> First Name:</label>
+                    <div class="col-sm-7">
+                      <input type="text" class="form-control" name="FNAME" id="fname" placeholder="First Name" required>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="lname" class="col-sm-4 col-form-label"><span class="text-danger">*</span> Last Name:</label>
+                    <div class="col-sm-7">
+                      <input type="text" class="form-control" name="LNAME" id="lname" placeholder="Last Name" required>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="email" class="col-sm-4 col-form-label"><span class="text-danger">*</span> Email:</label>
+                    <div class="col-sm-7">
+                      <input type="email" class="form-control" id="email" name="EMAIL" placeholder="Email Address" required>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="phone" class="col-sm-4 col-form-label">Phone Number:</label>
+                    <div class="col-sm-7">
+                       <input type="text" name="PHONE" class="form-control" value="" id="phone" placeholder="(xxx) xxx-xxxx">
+                   </div>
+                  </div>
+
+                  <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_25ed2db8c5f44be422ac9503a_3b9e966271" tabindex="-1" value=""></div>
+
+                  <div class="form-group row">
+                    <div class="col-sm-2">
+                      <button type="submit" class="btn btn-info btn-md" id="mc-embedded-subscribe" >Get Free Report</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+
+            </div>
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='MMERGE3';ftypes[3]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <!--End mc_embed_signup-->
+          </div><!-- Column -->
         </div>
       </div>
 
