--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,12 @@ body {
   overflow-x:hidden;
 }
 
+h5.card-title {
+  font-size: 1.0em;
+}
+h6.card-title {
+  font-size: 1.6em;
+}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
