--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -101,10 +101,7 @@
       <hr class="featurette-divider">
 
       <!-- FOOTER -->
-      <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2018 {{ site.company }} &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
+      {% include footer.html %}
     </main>
 
 
