--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -6,10 +6,18 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
-    {% include head.html %}
-    {% include header.html %}
+  {% include head.html %}
+  {% include header.html %}
 
+  <main role="main">
     {{ content }}
+
+    <!-- FOOTER -->
+    <footer class="container">
+      <p class="float-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2017-2018 {{ site.company }} &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+  </main>
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
