--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -13,10 +13,7 @@
     {{ content }}
 
     <!-- FOOTER -->
-    <footer class="container">
-      <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2017-2018 {{ site.company }} &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-    </footer>
+    {% include footer.html %}
   </main>
 
     <!-- Placed at the end of the document so the pages load faster -->
