--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,196 +1,196 @@
 
 
+<div class="row">
+  <div class="col-10 offset-md-2">
+    <h2 class="sr-only">Accessibility Testing - Get your site tested Today<h2>
+    <figure class="hidden-xs hidden-sm">
+      <img class="img-fluid" src="{{ site.url }}/assets/images/Accessibility-Testing.png" style="width: 80%;" alt="ADA Testing">
+    </figure>
+  </div>
+</div>
+<div class="row">
+  <div class="col-8 offset-md-2 text-right">
+    <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultations</a></p>
+  </div>
+</div>
+
+<hr class="featurette-divider">
+
+<!-- Marketing messaging and featurettes
+================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+<div class="row mb-3 ml-2">
+  <div class="col-md-8 offset-md-2">
+    <h2>VPAT Evaluation and Certification</h2>
+
+    <p class="lead">Our Web Accessibiltiy expert has been through the <a href="https://webaim.org/services/training/" target="_blank">WebAIM</a> course
+    and understands the <a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">VPAT</a> documentation process.</p>
+
+    <p class="lead">Get your <a href="{{ site.url }}/VPAT">VPAT Evaluation or Certification</a> today and start <a href="{{ site.url }}/Monitoring">monitoring your accessibility</a>.</p>
+  </div>
+</div>
+
+
+<div class="container marketing">
+
+  <!-- Three columns of text below the carousel -->
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">VPAT Monitoring</h5>
+          <h6 class="card-title"><span class="small text-danger">*</span> $1495/$165 mo</h6>
+          <ul>
+            <li class="text-left">Evaluation Audit</li>
+            <li class="text-left">Compliance Report</li>
+            <li class="text-left">How-To-Resolve</li>
+            <li class="text-left">Monthly Monitoring</li>
+            <li class="text-left">VPAT Certification</li>
+            <div aria-hidden="ture">
+              <p>&nbsp;</p>
+            </div>
+          </ul>
+
+          <h6 class="small text-left text-danger">* Request Quote for Enterprise Monitoring</h6>
+
+          <a href="{{ site.url }}/Monitoring" data-ycbm-modal="true" class="btn btn-info mt-3">Start Monitoring</a>
+        </div>
+      </div>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <div class="card shadow-lg p-3 mb-5 bg-light rounded" style="width: 20rem;">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">VPAT Evaluation & Certification</h5>
+          <h6 class="card-title">$1495 one-time</h6>
+          <ul>
+            <li class="text-left">Evaluation Audit</li>
+            <li class="text-left">Compliance Report</li>
+            <li class="text-left">How-To-Resolve</li>
+            <li class="text-left">VPAT Certification</li>
+            <div aria-hidden="ture">
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+            </div>
+          </ul>
+          <a href="{{ site.url }}/VPAT" data-ycbm-modal="true" class="btn btn-lg btn-info">Get Certified</a>
+        </div>
+      </div>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">VPAT Evaluation</h5>
+          <h6 class="card-title">$495 one-time</h6>
+          <ul>
+            <li class="text-left">Evaluation Audit</li>
+            <li class="text-left">Compliance Report</li>
+            <li class="text-left">How-To-Resolve</li>
+            <div aria-hidden="ture">
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+            </div>
+          </ul>
+
+          <a href="{{ site.url }}/VPAT" data-ycbm-modal="true" class="btn btn-md btn-info">Get Evaluated</a>
+        </div>
+      </div>
+     </div><!-- /.col-lg-4 -->
+
+
+     <small>*Pricing may very based on size of site</small>
+  </div><!-- /.row -->
+
+  <!-- START THE FEATURETTES -->
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">VPAT Certification <span class="text-muted">Done right.</span></h2>
+
+      <p class="lead">Don't waste your time trying to understand how to fill out a VPAT document. We have a web accessibility expert that can do this for you.</p>
+
+      <p class="lead">We have been filling out VPAT's for all industries and know the difference between the four (4) types documents and what
+      the requirements are.</p>
+
       <div class="row">
-        <div class="col-10 offset-md-2">
-          <h2 class="sr-only">Accessibility Testing - Get your site tested Today<h2>
-          <figure class="hidden-xs hidden-sm">
-            <img class="img-fluid" src="{{ site.url }}/assets/images/Accessibility-Testing.png" style="width: 80%;" alt="ADA Testing">
-          </figure>
+        <div class="col-md-4">
+          <ul>
+            <li>VPAT 508</li>
+            <li>VPAT EU</li>
+          </ul>
         </div>
+        <div class="col-md-4">
+          <li>VPAT WVAG</li>
+          <li>Full VPAT</li>
+        </ul>
       </div>
-      <div class="row">
-        <div class="col-8 offset-md-2 text-right">
-          <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultations</a></p>
-        </div>
-      </div>
+    </div>
 
-      <hr class="featurette-divider">
+      <p class="lead">Each VPAT is designed to meet a specific requirement. Unless you have a pre-requested VPAT, our experts will discuss your needs and help
+    determine the correct VPAT for your Certification.</p>
 
-      <!-- Marketing messaging and featurettes
-      ================================================== -->
-      <!-- Wrap the rest of the page in another container to center all the content. -->
-      <div class="row mb-3 ml-2">
-        <div class="col-md-8 offset-md-2">
-          <h2>VPAT Evaluation and Certification</h2>
+    <p><a href="{{ site.url}}/VPAT" class="btn btn-md btn-primary">Get your VPAT Certification</a></p>
 
-          <p class="lead">Our Web Accessibiltiy expert has been through the <a href="https://webaim.org/services/training/" target="_blank">WebAIM</a> course
-          and understands the <a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">VPAT</a> documentation process.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/VPATSummary.jpg" alt="Generic placeholder image">
+    </div>
+  </div>
 
-          <p class="lead">Get your <a href="{{ site.url }}/VPAT">VPAT Evaluation or Certification</a> today and start <a href="{{ site.url }}/Monitoring">monitoring your accessibility</a>.</p>
-        </div>
-      </div>
+  <hr class="featurette-divider">
 
+  <div class="row featurette">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading">VPAT Monitoring <span class="text-muted">Stay in the know</span></h2>
 
-      <div class="container marketing">
+      <p class="lead">Don't Stop at an Evaluation or Certification, monitor your site and stay on top of compliance issue with a monthly Compliance
+      Report.</p>
 
-        <!-- Three columns of text below the carousel -->
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">VPAT Monitoring</h5>
-                <h6 class="card-title"><span class="small text-danger">*</span> $1495/$165 mo</h6>
-                <ul>
-                  <li class="text-left">Evaluation Audit</li>
-                  <li class="text-left">Compliance Report</li>
-                  <li class="text-left">How-To-Resolve</li>
-                  <li class="text-left">Monthly Monitoring</li>
-                  <li class="text-left">VPAT Certification</li>
-                  <div aria-hidden="ture">
-                    <p>&nbsp;</p>
-                  </div>
-                </ul>
+      <p class="lead">We know that websites grow and the code is ever changing, therefore, we strongly advised you
+      sign up for monthly monitoring to keep you alerted of any issues that may arise as you fix bugs and grow your
+      site.</p>
 
-                <h6 class="small text-left text-danger">* Request Quote for Enterprise Monitoring</h6>
+      <p><a href="{{ site.url}}/Monitoring" class="btn btn-md btn-primary">Get a Monthly Compliance Report</a></p>
 
-                <a href="{{ site.url }}/Monitoring" data-ycbm-modal="true" class="btn btn-info mt-3">Start Monitoring</a>
-              </div>
-            </div>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <div class="card shadow-lg p-3 mb-5 bg-light rounded" style="width: 20rem;">
-              <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">VPAT Certification w/Evaluation</h5>
-                <h6 class="card-title">$1495 one-time</h6>
-                <ul>
-                  <li class="text-left">Evaluation Audit</li>
-                  <li class="text-left">Compliance Report</li>
-                  <li class="text-left">How-To-Resolve</li>
-                  <li class="text-left">VPAT Certification</li>
-                  <div aria-hidden="ture">
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                  </div>
-                </ul>
-                <a href="{{ site.url }}/VPAT" data-ycbm-modal="true" class="btn btn-lg btn-info">Get Certified</a>
-              </div>
-            </div>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">VPAT Evaluation</h5>
-                <h6 class="card-title">$495 one-time</h6>
-                <ul>
-                  <li class="text-left">Evaluation Audit</li>
-                  <li class="text-left">Compliance Report</li>
-                  <li class="text-left">How-To-Resolve</li>
-                  <div aria-hidden="ture">
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                  </div>
-                </ul>
+    </div>
+    <div class="col-md-5 order-md-1 mt-5 pt-5">
+      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/AccessibilityMonitoring.png" alt="Generic placeholder image">
+    </div>
+  </div>
 
-                <a href="{{ site.url }}/VPAT" data-ycbm-modal="true" class="btn btn-md btn-info">Get Evaluated</a>
-              </div>
-            </div>
-           </div><!-- /.col-lg-4 -->
+  <hr class="featurette-divider">
 
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">What are the Benefits? <span class="text-muted">See for yourself.</span></h2>
 
-           <small>*Pricing may very based on size of site</small>
-        </div><!-- /.row -->
+      <p class="lead">Web Accessibility is a great place to start to improve your marketing and SEO strategies.
+      Globally people with disabilities have a $9 Billion dollar disposable income. Why would you not take part in this?</p>
 
-        <!-- START THE FEATURETTES -->
+      <p class="lead">With accessibility design, you will build a site that is responsive by nature and has a substantial user interface.</p>
+      <ul>
+        <li>Increase traffic to your site</li>
+        <li>Have a site that is user friendly</li>
+        <li>Make it easy for Search Engine index your site</li>
+        <li>Keep visitors on your site longer & lower your bounce rate</li>
+        <li>Stand out from your compitition</li>
+      </ul>
 
-        <hr class="featurette-divider">
+      <p class="lead">Bottom line is if you are doing Web Accessible for marketing or for Section 508 requirements you need to stay on top of it.
+      We help you do that with VPAT Evaluations, Certifications, and Monitoring.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/AccessibilityBenefits.jpeg" alt="Generic placeholder image">
+    </div>
+  </div>
 
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">VPAT Certification <span class="text-muted">Done right.</span></h2>
+  <hr class="featurette-divider">
 
-            <p class="lead">Don't waist your time trying to understand how fill out a VPAT document. We have a web accessibility expert that can do this for you.</p>
+  <!-- /END THE FEATURETTES -->
 
-            <p class="lead">We have been filling out VPAT's for all industries and know the differance between the four (4) types docuemtns and what
-            the requiremtns are.</p>
-
-            <div class="row">
-              <div class="col-md-4">
-                <ul>
-                  <li>VPAT 508</li>
-                  <li>VPAT EU</li>
-                </ul>
-              </div>
-              <div class="col-md-4">
-                <li>VPAT WVAG</li>
-                <li>Full VPAT</li>
-              </ul>
-            </div>
-          </div>
-
-            <p class="lead">Each VPAT is desiged to meet a spacifice requirement. Unless you have a pre-requested VPAT, our experts will discuss your needs and help
-          determin the correct VPAT for your Certificatation.</p>
-
-          <p><a href="{{ site.url}}/VPAT" class="btn btn-md btn-primary">Get your VPAT Certification</a></p>
-
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/VPATSummary.jpg" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">VPAT Monitoring <span class="text-muted">Stay in the know</span></h2>
-
-            <p class="lead">Don't Stop at an Evaluation or Certification, monitor you site and stay on top of compliance issue with a monthly Compliance
-            Report.</p>
-
-            <p class="lead">We know that websites grow and code is ever changing therfore we strongly adviesed you
-            sign up for monthly monitoring to keep you alerted of any issues that may arise as you fix bgs and grow your
-            site.</p>
-
-            <p><a href="{{ site.url}}/Monitoring" class="btn btn-md btn-primary">Get a Monthly Compliance Report</a></p>
-
-          </div>
-          <div class="col-md-5 order-md-1 mt-5 pt-5">
-            <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/AccessibilityMonitoring.png" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">What are the Benefits? <span class="text-muted">See for yourself.</span></h2>
-
-            <p class="lead">Web Accessibility is a great place to start to improve your marketing and SEO strategies.
-            Globally people with disabilities have a $9 Billion dollar disposable income. Why would you not take part in this?</p>
-
-            <p class="lead">With accessibility design, you will build a site that is responsive by nature and has a substantial user interface.</p>
-            <ul>
-              <li>Increase traffic to your site</li>
-              <li>Have a site that is user friendly</li>
-              <li>Make it easy for Search Engine index your site</li>
-              <li>Keep visitors on your site longer & lower your bounce rate</li>
-              <li>Stand out from your compitition</li>
-            </ul>
-
-            <p class="lead">Bottom line is if you are doing Web Accessible for marketing or for Section 508 requirements you need to stay on top of it.
-            We help you do that with VPAT Evaluations, Certifications, and Monitoring.</p>
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/AccessibilityBenefits.jpeg" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <!-- /END THE FEATURETTES -->
-
-      </div><!-- /.container -->
+</div><!-- /.container -->
