--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="author" content="">
   <link rel="icon" href="{{ site.url }}/assets/images/favicon.ico">
 
-  <title>{{ site.titile }}</title>
+  <title>{{site.title}} | {% if page.title %}{{ page.title }}{% else %}Accessibility Testing{% endif %}</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
