--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,15 @@
-<footer class="container">
-  <p class="float-right"><a href="#">Back to top</a></p>
-  <p>&copy; 2017-2018 {{ site.company }} &middot; <a href="{{ site.url }}/policies/Privacy-policy.pdf">Privacy</a> <!-- &middot; <a href="#">Terms</a> --></p>
-</footer>
+      <footer class="container">
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2017-2018 {{ site.company }} &middot; <a href="{{ site.url }}/policies/Privacy-policy.pdf">Privacy</a> <!-- &middot; <a href="#">Terms</a> --></p>
+      </footer>
+
+    </main>
+
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="{{ site.url }}/assets/js/vendor/popper.min.js"></script>
+    <script src="{{ site.url }}/assets/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+  </body>
+</html>
