--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
-<header>
+<body>
+  <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
+  
+  <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="index">{{ site.title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
