--- a/_includes/VPAT-Brochure.html
+++ b/_includes/VPAT-Brochure.html
@@ -2,37 +2,39 @@
 <div id="mc_embed_signup">
   <form action="https://kaffeinatedkodemonkey.us11.list-manage.com/subscribe/post?u=25ed2db8c5f44be422ac9503a&amp;id=4bd59d6de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-      <h3>Free VPAT Brochure</h3>
-      <div class="indicates-required"><span class="asterisk text-danger text-danger">*</span> indicates required</div>
+      <h3 class="text-center">Download Free VPAT Brochure</h3>
+      <div class="indicates-required text-right">
+        <small><span class="asterisk text-danger text-danger">*</span> indicates required</small>
+      </div>
 
       <p>&nbsp;</p>
       <div class="form-group row">
-        <label for="mce-FNAME" class="col-sm-4 col-form-label"><span class="asterisk text-danger">*</span>First Name:  </label>
-        <div class="col-sm-6">
+        <label for="mce-FNAME" class="col-sm-4 col-form-label text-right text-right"><span class="asterisk text-danger">*</span>First Name:  </label>
+        <div class="col-sm-8">
           <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" required >
         </div>
       </div>
       <div class="form-group row">
-	       <label for="mce-LNAME" class="col-sm-4 col-form-label"><span class="asterisk text-danger">*</span>Last Name:</label>
-         <div class="col-sm-6">
+	       <label for="mce-LNAME" class="col-sm-4 col-form-label text-right"><span class="asterisk text-danger">*</span>Last Name:</label>
+         <div class="col-sm-8">
            <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" required>
          </div>
       </div>
       <div class="form-group row">
-        <label for="mce-URL" class="col-sm-4 col-form-label"><span class="asterisk text-danger">*</span>Website: </label>
-        <div class="col-sm-6">
+        <label for="mce-URL" class="col-sm-4 col-form-label text-right"><span class="asterisk text-danger">*</span>Website: </label>
+        <div class="col-sm-8">
           <input type="url" value="" name="URL" class="form-control" id="mce-URL" required>
         </div>
       </div>
       <div class="form-group row">
-        <label for="mce-EMAIL" class="col-sm-4 col-form-label"><span class="asterisk text-danger">*</span>Email:</label>
-        <div class="col-sm-6">
+        <label for="mce-EMAIL" class="col-sm-4 col-form-label text-right"><span class="asterisk text-danger">*</span>Email:</label>
+        <div class="col-sm-8">
           <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" required>
         </div>
       </div>
       <div class="form-group row">
-        <label for="mce-PHONE" class="col-sm-4 col-form-label">Phone: </label>
-        <div class="col-sm-6">
+        <label for="mce-PHONE" class="col-sm-4 col-form-label text-right">Phone: </label>
+        <div class="col-sm-8">
           <input type="text" name="PHONE" class="form-control" value="" id="mce-PHONE">
         </div>
       </div>
@@ -44,7 +46,7 @@
       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_25ed2db8c5f44be422ac9503a_4bd59d6de7" tabindex="-1" value=""></div>
       <div class="clear">
         <div class="form-group row">
-          <div class="col-sm-10">
+          <div class="col-3 offset-9">
             <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info">Sign in</button>
           </div>
         </div>
