--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,15 @@
 <body>
-  <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=194904660574494&autoLogAppEvents=1';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
   
+  <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
+
   <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="index">{{ site.title }}</a>
