--- a/_includes/social.html
+++ b/_includes/social.html
@@ -15,7 +15,7 @@
       data-layout="standard"
       data-action="like"
       data-size="small"
-      data-show-faces="true"
+      data-show-faces="false"
       data-share="true">
     </div>
   </div>
